introduction to math in docs

--- a/README
+++ b/README
@@ -12,4 +12,8 @@ V : Ω -> R - inverse depth variance
 
 se(3) - poses
 
+note:
+- CPU SIMD: AVX2/AVX-512 (or NEON) for residuals/gradients
+- CUDA specifics: texture memory for warps, shared-mem tiling for Jacobians, warp-level reductions, streams for overlap, pinned & page-locked host buffers
 
+the GPT-generated introduction may (or may not) help with the math
