extra notes + start new implementation from scratch

--- a/README
+++ b/README
@@ -15,5 +15,8 @@ se(3) - poses
 note:
 - CPU SIMD: AVX2/AVX-512 (or NEON) for residuals/gradients
 - CUDA specifics: texture memory for warps, shared-mem tiling for Jacobians, warp-level reductions, streams for overlap, pinned & page-locked host buffers
+- (maybe) replace raw-intensity error with a learned dense descriptor
+- (maybe) tightly-coupled IMU (VIO) with preintegration
+- loop closure
 
 the GPT-generated introduction may (or may not) help with the math
