got the noros version built

--- a/README
+++ b/README
@@ -10,11 +10,8 @@ D : Ω -> R - per-pixel inverse depth map
 V : Ω -> R - inverse depth variance
 Ω ⊂ R^2 - set of normalized pixel coordinates
 
-se(3) - poses
-
-note:
+notes:
 - CPU SIMD: AVX2/AVX-512 (or NEON) for residuals/gradients
 - CUDA specifics: texture memory for warps, shared-mem tiling for Jacobians, warp-level reductions, streams for overlap, pinned & page-locked host buffers
 - (maybe) replace raw-intensity error with a learned dense descriptor
 - (maybe) tightly-coupled IMU (VIO) with preintegration
-- loop closure
